// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toastNotificationsReducer should handle adding and removing toast notifications: toast added 1`] = `
Object {
  "displayedToasts": 2,
  "toasts": Array [
    Object {
      "alertType": "success",
      "header": "Lorem",
      "message": "Lorem ipsum dolor",
      "persistent": undefined,
    },
    Object {
      "alertType": "success",
      "header": "Lorem",
      "message": "Lorem ipsum dolor",
      "persistent": undefined,
    },
  ],
}
`;

exports[`toastNotificationsReducer should handle adding and removing toast notifications: toast removed 1`] = `
Object {
  "displayedToasts": 2,
  "toasts": Array [
    Object {
      "alertType": "success",
      "header": "Lorem",
      "message": "Lorem ipsum dolor",
      "persistent": undefined,
      "removed": true,
    },
    Object {
      "alertType": "success",
      "header": "Lorem",
      "message": "Lorem ipsum dolor",
      "persistent": undefined,
    },
  ],
}
`;

exports[`toastNotificationsReducer should handle specific defined types: defined type TOAST_ADD 1`] = `
Object {
  "result": Object {
    "displayedToasts": 1,
    "toasts": Array [
      Object {
        "alertType": undefined,
        "header": undefined,
        "message": undefined,
        "persistent": undefined,
      },
    ],
  },
  "type": "TOAST_ADD",
}
`;

exports[`toastNotificationsReducer should handle specific defined types: defined type TOAST_PAUSE 1`] = `
Object {
  "result": Object {
    "displayedToasts": 0,
    "toasts": Array [],
  },
  "type": "TOAST_PAUSE",
}
`;

exports[`toastNotificationsReducer should handle specific defined types: defined type TOAST_REMOVE 1`] = `
Object {
  "result": Object {
    "displayedToasts": 0,
    "toasts": Array [],
  },
  "type": "TOAST_REMOVE",
}
`;

exports[`toastNotificationsReducer should handle specific defined types: defined type TOAST_RESUME 1`] = `
Object {
  "result": Object {
    "displayedToasts": 0,
    "toasts": Array [],
  },
  "type": "TOAST_RESUME",
}
`;
